# pons-auto

./: .env  .env.example  .env.production  .gitignore  AI_FEATURES_GUIDE.md  AI_IMPLEMENTATION_SUMMARY.md  BUILD_SUCCESS.md  COMPLETE_PROJECT_SUMMARY.md  COMPLETE_SUMMARY.txt  DEPLOYMENT_MONETIZATION_GUIDE.md  Dockerfile  Dockerfile.prod  GROK_SUMMARY.md  IMPLEMENTATION_A_TO_G.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_A_TO_K.md  Makefile  NEW_FEATURES.md  PONS_AUTO_AI_FEATURES.md  PONS_AUTO_UPDATE.md  Procfile  QUICK_DEPLOYMENT.md  README.md  STREAMLIT_DEPLOY.md  alembic.ini  deploy.py  docker-compose.prod.yml  docker-compose.yml  nginx.conf  pons_auto.db  pyproject.toml  pyrightconfig.json  pytest.ini  railway.toml  render.yaml  requirements-dev.txt  requirements.txt  shiftly.db  start.sh  streamlit_app.py  (+1 more)
.github/workflows/: ci-cd.yml
.streamlit/: secrets.toml.example
alembic/: env.py
config/: alerts.yaml  limits.yaml  onboarding.yaml  proxy.yaml  tokens.yaml
dashboard/: .gitignore  README.md  ai_description.py  app.py  photo_manager.py  pyrightconfig.json  requirements.txt  start.sh
docs/: IMAGE_OPTIMIZATION.md  shiftly_architecture.md
src/pons/: __init__.py  auth.py  config.py  email.py  images.py  init_db.py  integrations.py  logging_config.py  main.py  models.py  production_config.py  rate_limit.py  seed_data.py  tasks.py  webhooks.py
src/pons/ai/: __init__.py  router.py
src/pons/auth/: __init__.py  router.py
tests/: load_test.py  test_comprehensive.py  test_feed_integrations.py  test_inventory.py  test_normalization.py  test_parsers.py
(+16 files in other folders)
